@@ -1,3 +1,5 @@
+2007-04-09 Beginnings of usetex support for pdf backend. -JKS
+
 2007-04-07 Fixed legend/LineCollection bug. Added label support
            to collections. - EF
 
